[gd_scene load_steps=11 format=2]

[ext_resource path="res://RESOURCES/Player/LargeShadow.png" type="Texture" id=1]
[ext_resource path="res://Entities/Entity.gd" type="Script" id=2]
[ext_resource path="res://UI/DamageNumbers/DamageNumberManager.tscn" type="PackedScene" id=3]
[ext_resource path="res://Entities/CombatEffects.tres" type="SpriteFrames" id=4]
[ext_resource path="res://Entities/CombatEffects.gd" type="Script" id=5]
[ext_resource path="res://Entities/CombatSounds.gd" type="Script" id=6]

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;

uniform vec4 flash_color : hint_color = vec4(1.0);
uniform float flash_modifier : hint_range(0.0, 1.0) = 0.0;

void fragment() {
	vec4 color = texture (TEXTURE, UV);
	color.rgb = mix(color.rgb, flash_color.rgb, flash_modifier);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=6]
resource_local_to_scene = true
shader = SubResource( 7 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "idle" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Weapon1:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 8 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Weapon2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2, 12 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Weapon2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Weapon1:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Armor/BodyArmor/Chestplate:animation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "attack" ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Armor/BodyArmor/Chestplate:frame")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Armor/BodyArmor/Shoulders:animation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "die" ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Armor/BodyArmor/Shoulders:frame")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Armor/BodyArmor/Tunic:animation")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "attack" ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Armor/BodyArmor/Tunic:frame")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Armor/Gloves/HandProtection:animation")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "attack" ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Armor/Gloves/HandProtection:frame")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Armor/Pants/Sideguards:animation")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "attack" ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("Armor/Pants/Sideguards:frame")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("Armor/Boots/BootProtection:animation")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "attack" ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("Armor/Boots/BootProtection:frame")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/19/type = "value"
tracks/19/path = NodePath("Weapon2:show_behind_parent")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/20/type = "value"
tracks/20/path = NodePath("Weapon1:show_behind_parent")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/21/type = "value"
tracks/21/path = NodePath("Weapon1:rotation_degrees")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/22/type = "value"
tracks/22/path = NodePath("Weapon2:rotation_degrees")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/imported = false
tracks/22/enabled = true
tracks/22/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "hurt"
length = 0.15
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.02, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="Entity" type="AnimatedSprite"]
material = SubResource( 6 )
script = ExtResource( 2 )
per_level = {
"armor": 5,
"dexterity": 3,
"expertise": 0,
"ferocity": 0,
"magic_penetration": 0,
"mastery": 0,
"occult_aversion": 5,
"penetration": 0,
"potency": 0,
"power": 5,
"precision": 5,
"toughess": 0,
"vitality": 10
}

[node name="Skills" type="Node2D" parent="."]

[node name="Effects" type="Node2D" parent="."]

[node name="ActionTimer" type="Timer" parent="."]
one_shot = true

[node name="LargeShadow" type="Sprite" parent="."]
position = Vector2( -9.53674e-07, 256 )
scale = Vector2( 12.5216, 10.65 )
z_index = -1
texture = ExtResource( 1 )

[node name="Items" type="Node2D" parent="."]

[node name="DamageNumberManager" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -100 )
travel = Vector2( 0, -600 )
duration = 1
magic_color = Color( 0.682353, 0.466667, 0.858824, 1 )
phys_color = Color( 0.992157, 0.4, 0.4, 1 )
magic_crit_color = Color( 0.545098, 0, 1, 1 )
phys_crit_color = Color( 0.866667, 0, 0, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Specializations" type="Node2D" parent="."]

[node name="CombatEffects" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -200 )
scale = Vector2( 10, 10 )
frames = ExtResource( 4 )
animation = "blood_3"
script = ExtResource( 5 )

[node name="CombatSounds" type="AudioStreamPlayer" parent="."]
volume_db = -5.0
script = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 8 )
anims/on_hit = SubResource( 2 )

[connection signal="animation_finished" from="." to="." method="_on_Entity_animation_finished"]
[connection signal="timeout" from="ActionTimer" to="." method="_on_ActionTimer_timeout"]
[connection signal="animation_finished" from="CombatEffects" to="CombatEffects" method="_on_CombatEffects_animation_finished"]
